--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <script src="./js-cam-motion/lib/events.js"></script>
     <script src="./js-cam-motion/lib/detectors.js"></script>
     <script src="./js-cam-motion/lib/main.js"></script>
-    <script src="./dist.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
