--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <img id="whale" alt="whale" src="./whale.png"/>
 
     <canvas id="canvas-blended" width="1000" height="1500"></canvas>
-    <script language="JavaScript" src="../js-cam-motion/lib/circularbuffer.js"></script>
-    <script language="JavaScript" src="../js-cam-motion/lib/events.js"></script>
-    <script language="JavaScript" src="../js-cam-motion/lib/detectors.js"></script>
-    <script language="JavaScript" src="./js-cam-motion/lib/main.js"></script>
-    <script src="./index.js"></script>
+    <script src="../js-cam-motion/lib/circularbuffer.js"></script>
+    <script src="../js-cam-motion/lib/events.js"></script>
+    <script src="../js-cam-motion/lib/detectors.js"></script>
+    <script src="./js-cam-motion/lib/main.js"></script>
+    <script src="./dist.js"></script>
     <header>
       <div class="inner">
         <h1>Whale-theremin</h1>
